--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
+body {
+  background-color: #e9edee;
+}
+
 .leftLogoCont {
   background-color: #222f3f;
   align-items: start;
   padding-block: 10px;
-  padding-left: 60px;
+  padding-left: 65px;
 }
 .imgLogo {
   width: 120px;
@@ -10,7 +14,7 @@
 }
 .menuCont {
   background-color: #364757;
-  padding-left: 60px;
+  padding-left: 65px;
 }
 ul {
   padding-block: 5px;
@@ -27,9 +31,9 @@ li {
 }
 .mainCont {
   width: 90%;
+  margin-inline: 5%;
   margin-block: 20px;
-  align-items: center;
-  background-color: white;
+  background-color: #e9edee;
   font-family: Arial, Helvetica, sans-serif;
 }
 .orangeCont {
@@ -37,4 +41,46 @@ li {
   text-align: center;
   padding-block: 3px;
   color: #d2d6df;
+}
+.greenCont {
+  background-image: url(./assets/assets/bg-image.png);
+  text-align: center;
+  padding-block: 60px;
+  color: #d2d6df;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+h1 {
+  font-size: 2em;
+  padding-bottom: 25px;
+}
+
+.boxCont {
+  background-color: white;
+}
+/*.boxCont div {
+  width: 20%;
+  float: left;
+  display: block;
+}*/
+
+.imageBox1 {
+  background-image: url(./assets/assets/img_9.png);
+  height: 200px;
+  background-position: center;
+}
+.imageBox2 {
+  background-image: url(./assets/assets/img_10.png);
+  height: 200px;
+  background-position: center;
+}
+.BttCont {
+  background-color: #364757;
+  text-align: center;
+}
+.centerLogoCont {
+  background-color: #222f3f;
+  padding-block: 10px;
+  text-align: center;
 }
