--- a/style.css
+++ b/style.css
@@ -59,11 +59,16 @@ h1 {
 .boxCont {
   background-color: white;
 }
-/*.boxCont div {
+.box {
   width: 20%;
   float: left;
-  display: block;
-}*/
+  margin-block: 20px;
+}
+
+.imageBox {
+  width: 100%;
+  height: 300px;
+}
 
 .imageBox1 {
   background-image: url(./assets/assets/img_9.png);
