--- a/style.css
+++ b/style.css
@@ -24,11 +24,12 @@ ul {
 li {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
-  color: #d2d6df;
+  color: white;
   display: inline;
   list-style-type: none;
   padding-right: 30px;
 }
+/* Fine Header */
 .mainCont {
   width: 90%;
   margin-inline: 5%;
@@ -46,40 +47,49 @@ li {
   background-image: url(./assets/assets/bg-image.png);
   text-align: center;
   padding-block: 60px;
-  color: #d2d6df;
+  color: white;
   font-weight: bold;
   margin-bottom: 20px;
 }
-
+.whiteBox {
+  background-color: white;
+}
 h1 {
   font-size: 2em;
   padding-bottom: 25px;
 }
 
-.boxCont {
-  background-color: white;
-}
 .box {
-  width: 20%;
+  width: 22%;
   float: left;
-  margin-block: 20px;
+  margin: 20px;
+  box-shadow: #364757;
 }
 
 .imageBox {
   width: 100%;
   height: 300px;
+  border-radius: 5px;
 }
 
 .imageBox1 {
   background-image: url(./assets/assets/img_9.png);
   height: 200px;
   background-position: center;
+  margin-bottom: 30px;
+  width: 90%;
+  align-items: center;
 }
 .imageBox2 {
   background-image: url(./assets/assets/img_10.png);
   height: 200px;
   background-position: center;
+  margin-bottom: 30px;
+  width: 90%;
+  align-items: center;
 }
+
+/* Fine main */
 .BttCont {
   background-color: #364757;
   text-align: center;
